--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     
         <button class="btn btn_new">🔁 New game</button>
-        <img class="dice hidden" src="/img/dice-1.png" alt="" >
+        <img class="dice hidden" src="./img/dice-1.png" alt="" >
         <button class="btn btn_roll">🎲 Roll dice</button>
         <button class="btn btn_hold">➕ Add</button>
     
